--- a/photo.html
+++ b/photo.html
@@ -5,12 +5,12 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <link href="styles.css" rel="stylesheet" type="text/css" />
-    <title>Photo</title>
+    <title>How croissant is made</title>
   </head>
   <body>
     <h1>🥐 A picture of a croissant</h1>
 
-    <img src="croissant.jpg" alt="Croissant" />
+    <img src="croissant.jpg" alt="croissant.com" />
 
     <footer>
       <a href="index.html">Homepage</a>
