--- a/index.html
+++ b/index.html
@@ -4,11 +4,16 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <meta
+      name="description"
+      content="This website covers all the important
+    products of croissant.com. Find out about croissant and how to pick them."
+    />
     <link href="styles.css" rel="stylesheet" type="text/css" />
     <title>Homepage</title>
   </head>
   <body>
-    <h1>🥐 Croissant</h1>
+    <h1>🥐Croissant.com Homepage</h1>
 
     <p>
       A croissant is a buttery, flaky, viennoiserie pastry of Austrian origin,
